[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ragmind-api"
version = "0.1.0"
description = "RAGMind backend API"
packages = [{ include = "ragmind_api" }]
authors = ["Admin <admin@yyassif.dev>"]
readme = "README.md"


[tool.poetry.dependencies]
ragmind-core = { path = "../core", extras = ["base"] }
python = "3.13.0"

torch = [
    { version = "2.3.1", source = "pypi", platform = "darwin" },
    { version = "2.3.1", source = "pypi", platform = "linux", markers = "platform_machine != 'x86_64'" },
    { version = "2.3.1+cpu", source = "pytorch-cpu-src", platform = "linux", markers = "platform_machine == 'x86_64'" },
    { version = "2.3.1+cpu", source = "pytorch-cpu-src", platform = "win32" },
]
torchvision = [
    { version = "0.18.1", source = "pypi", platform = "darwin" },
    { version = "0.18.1", source = "pypi", platform = "linux", markers = "platform_machine != 'x86_64'" },
    { version = "0.18.1+cpu", source = "pytorch-cpu-src", platform = "linux", markers = "platform_machine == 'x86_64'" },
    { version = "0.18.1+cpu", source = "pytorch-cpu-src", platform = "win32" },
]
langchain = "0.2.10"
litellm = "1.41.25"
openai = "1.36.0"
gitpython = "3.1.43"
pdf2image = "1.17.0"
nest-asyncio = "1.6.0"
pypdf = "4.3.0"
supabase = "2.5.3"
tiktoken = "0.7.0"
fastapi = "0.111.1"
python-multipart = "0.0.9"
uvicorn = "0.30.3"
pypandoc = "1.13"
docx2txt = "0.8"
python-jose = "3.3.0"
asyncpg = "0.29.0"
pyright = "1.1.372"
resend = "2.2.0"
html5lib = "1.1"
beautifulsoup4 = "4.12.3"
newspaper3k = "0.2.8"
xlrd = "2.0.1"
redis = "5.0.7"
flower = "2.0.1"
boto3 = "1.34.145"
botocore = "1.34.145"
python-dotenv = "1.0.1"
pytesseract = "0.3.10"
async-generator = "1.10"
posthog = "3.5.0"
jq = "1.7.0"
pytest = "8.3.1"
watchdog = "4.0.1"
langchain-community = "0.2.9"
langchain-openai = "0.1.17"
pydantic-settings = "2.3.4"
langfuse = "2.39.2"
pandasai = "2.2.12"
colorlog = "6.8.2"
psycopg2-binary = "2.9.9"
celery = { extras = ["redis", "sqs"], version = "5.4.0" }
unstructured = { extras = ["all-docs"], version = "0.11.8" }
llama-parse = "0.4.9"
llama-index = "0.10.56"
lxml = { extras = ["html_clean"], version = "5.2.2" }
ragas = "0.1.10"
datasets = "2.20.0"
fpdf2 = "2.7.9"
unidecode = "1.3.8"
langchain-cohere = "0.1.9"
pyinstrument = "4.6.2"
playwright = "1.45.0"
langgraph = "0.1.9"
tavily-python = "0.3.5"
duckduckgo-search = "6.2.1"
google-api-python-client = "2.137.0"
google-auth-httplib2 = "0.2.0"
google-auth-oauthlib = "1.2.1"
msal = "1.30.0"
sentry-sdk = { version = "2.10.0", extras = ["fastapi"] }
sqlmodel = "0.0.19"
megaparse = "0.0.19"

[tool.poetry.group.dev.dependencies]
mypy = "1.11.0"
pre-commit = "3.7.1"
ipykernel = "6.29.5"
ruff = "0.4.10"
pytest-asyncio = "0.23.8"
flake8 = "7.1.0"
flake8-black = "0.3.6"
pytest = "8.3.1"
pytest-dotenv = "0.5.2"
pytest-mock = "3.14.0"
pytest-celery = "1.0.1"

[[tool.poetry.source]]
name = "pytorch-cpu-src"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.ruff]
line-length = 88
exclude = [".git", "__pycache__", ".mypy_cache", ".pytest_cache"]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
]
ignore = [
    "B904",
    "B006",
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]


[tool.ruff.lint.isort]
order-by-type = true
relative-imports-order = "closest-to-furthest"
extra-standard-library = ["typing"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
known-first-party = []

[tool.pytest.ini_options]
addopts = "--tb=short -ra -v"
filterwarnings = ["ignore::DeprecationWarning"]
